Fix z-index of lg nav container

--- a/style.css
+++ b/style.css
@@ -13,10 +13,12 @@ h1, h2, h3, h4, h5, h6{
 h1 {
     font-size: 3rem;
     margin: 0px;
+    text-shadow: 1px 1px 3px #000000;
 }
 
 h2 {
     font-size: 2rem;
+    text-shadow: 1px 1px 3px #000000;
 }
 
 p {
@@ -115,6 +117,7 @@ a {
     border: black;
     box-shadow: 2px 2px 5px 2px rgba(0,0,0,0.2);
     border-radius: 30px;
+    z-index: 1;
 }
 
 .card-img-top{
@@ -128,6 +131,7 @@ a {
     flex-direction: column;
     align-items: center;;
     gap: 30px;
+    z-index: 1;
 }
 
 .card-body{
@@ -180,7 +184,7 @@ a {
 }
 
 #headshot{
-    border-radius: 10px;
+    border-radius: 30px;
     max-width: 500px;
     height: auto;
     margin: 0px;
@@ -227,6 +231,7 @@ a {
         position: fixed;
         right: 8vw;
         list-style: none;
+        z-index: 100;
     }
 
     #home, #projects, #about{
